tests/baselines/reference/invalidVoidValues.errors.txt
==== tests/cases/conformance/types/primitives/void/invalidVoidValues.ts (11 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2323: Type 'number' is not assignable to type 'void'.
    x = '';
    ~
!!! error TS2323: Type 'string' is not assignable to type 'void'.
    x = true;
    ~
!!! error TS2323: Type 'boolean' is not assignable to type 'void'.
    
    enum E { A }
    x = E;
    ~
!!! error TS2323: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! error TS2323: Type 'E' is not assignable to type 'void'.
    
    class C { foo: string }
    var a: C;
    x = a;
    ~
!!! error TS2323: Type 'C' is not assignable to type 'void'.
    
    interface I { foo: string }
    var b: I;
    x = b;
    ~
!!! error TS2323: Type 'I' is not assignable to type 'void'.
    
    x = { f() {} }
    ~
!!! error TS2323: Type '{ f: () => void; }' is not assignable to type 'void'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2323: Type 'typeof M' is not assignable to type 'void'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2323: Type 'T' is not assignable to type 'void'.
    }
    x = f;
    ~
!!! error TS2323: Type '<T>(a: T) => void' is not assignable to type 'void'.